// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio should render and emit 1`] = `
<div class="mdc-radio"><input type="radio" class="mdc-radio__native-control" value="val">
  <div class="mdc-radio__background">
    <div class="mdc-radio__outer-circle"></div>
    <div class="mdc-radio__inner-circle"></div>
  </div>
</div>
`;

exports[`Radio should render as disabled 1`] = `
<div class="mdc-radio mdc-radio--disabled"><input type="radio" disabled="disabled" class="mdc-radio__native-control">
  <div class="mdc-radio__background">
    <div class="mdc-radio__outer-circle"></div>
    <div class="mdc-radio__inner-circle"></div>
  </div>
</div>
`;

exports[`Radio should render with no prop 1`] = `
<div class="mdc-radio"><input type="radio" class="mdc-radio__native-control">
  <div class="mdc-radio__background">
    <div class="mdc-radio__outer-circle"></div>
    <div class="mdc-radio__inner-circle"></div>
  </div>
</div>
`;
